Fixed spacing bug for profile page

--- a/core/app/assets/stylesheets/users/profile.css.less
+++ b/core/app/assets/stylesheets/users/profile.css.less
@@ -4,66 +4,73 @@
 #main-wrapper .content .profile {
   margin: 24px 0 0;
 
-  .top-channels {
-    > ol {
-      .border-radius(3px);
-      border: 1px solid #e7e7e7;
-      list-style-position: inside;
-      margin: 8px 32px 15px 0;
-      padding: 0;
-      > li {
-        border-bottom: 1px solid #e7e7e7;
-        display: none;
-        padding: 8px 0px 8px 10px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+  .top-channels-region {
+    margin-left: 6px;
+    .top-channels {
+      > ol {
+        .border-radius(3px);
+        border: 1px solid #e7e7e7;
+        list-style-position: inside;
+        margin: 8px 32px 15px 0;
+        padding: 0;
+        > li {
+          border-bottom: 1px solid #e7e7e7;
+          display: none;
+          padding: 8px 0px 8px 10px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
 
-        &:nth-child(-n+5) {
-          display: list-item;
-        }
-        &:nth-child(5), &:last-child {
-          border-bottom: solid 1px transparent;
-        }
-        &:hover {
-          > a > span {
-            text-decoration: none;
+          &:nth-child(-n+5) {
+            display: list-item;
           }
-        }
-        > a {
-          padding: 0 0 0 6px;
+          &:nth-child(5), &:last-child {
+            border-bottom: solid 1px transparent;
+          }
+          &:hover {
+            > a > span {
+              text-decoration: none;
+            }
+          }
+          > a {
+            padding: 0 0 0 6px;
 
-          > span {
-            color: @headingFontColor;
-            float: right;
-            padding: 0 10px 0 0;
-            font-size: 0.9em;
+            > span {
+              color: @headingFontColor;
+              float: right;
+              padding: 0 10px 0 0;
+              font-size: 0.9em;
 
+            }
           }
         }
       }
+      .show-more { display: block; }
+      .show-less { display: none; }
+      > a {
+        float: right;
+        padding: 6px 48px 0;
+      }
     }
-    .show-more { display: block; }
-    .show-less { display: none; }
-    > a {
-      float: right;
-      padding: 6px 48px 0;
+
+    .top-channel-container.showMore .top-channels {
+      li {
+        display: list-item;
+
+        &:nth-child(5) {
+          border-bottom: 1px solid #e7e7e7;
+        }
+        &:last-child {
+          border-bottom: solid 1px transparent;
+        }
+      }
+      .show-more { display: none; }
+      .show-less { display: block; }
     }
   }
 
-  .top-channel-container.showMore .top-channels {
-    li {
-      display: list-item;
-
-      &:nth-child(5) {
-        border-bottom: 1px solid #e7e7e7;
-      }
-      &:last-child {
-        border-bottom: solid 1px transparent;
-      }
-    }
-    .show-more { display: none; }
-    .show-less { display: block; }
+  h1 {
+    margin: 10px 0 0 6px;
   }
 
   .row {
